--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="description"
+    content="Църковен православен календар (в GitHub Pages). Източник: Сайт на Българска Патриаршия: Българска Православна Църква">
+  <meta name="keywords" content="Православен календар, Църковен календар, БПЦ, гитхъб, github">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Православен календар</title>
