--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <div class="input-row">
         <label for="year-selection">Година: </label>
         <select name="year-selection" id="year-selection">
+          <option value="2026">2026</option>
           <option value="2025">2025</option>
           <option value="2024">2024</option>
           <option value="2023">2023</option>
