Add new button - "Current Day"

--- a/index.html
+++ b/index.html
@@ -83,8 +83,12 @@
       </div>
 
 
-      <button class="btn" id="select-calendar-btn" type="button">
+      <button class="btn page-top" id="select-calendar-btn" type="button">
         Покажи
+      </button>
+
+      <button class="btn page-top" id="current-day-btn" type="button">
+        Празник за деня
       </button>
     </form>
 
